[package]
name = "rust_remove_comments_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata]
include = [
    "syntax_rules.json",
]
